animated overlay boxes complete

--- a/eks/sass/_grid.scss
+++ b/eks/sass/_grid.scss
@@ -10,6 +10,7 @@
     flex-flow: row wrap;
     margin-left: -15px;
     margin-right: -15px;
+    margin-bottom: 30px;
 }
 .block {
     display: block;
