--- a/eks/sass/_grid.scss
+++ b/eks/sass/_grid.scss
@@ -11,6 +11,7 @@
     margin-left: -15px;
     margin-right: -15px;
     margin-bottom: 30px;
+    /*Need to absorb .block bottom margin*/
 }
 .block {
     display: block;
@@ -18,6 +19,7 @@
     padding-right: 15px;
     flex: 0 0 100%;
     max-width: 100%;
+    margin-bottom: 30px;
     &__half {
         flex: 0 0 50%;
         max-width: 50%;
@@ -29,6 +31,13 @@
     &__fourth {
         flex: 0 0 25%;
         max-width: 25%;
+    }
+}
+html {
+    body {
+        .flex {
+            display: flex;
+        }
     }
 }
 @media screen and (min-width: 576px) {
