--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,7 +50,6 @@ body {
   flex-flow: row wrap;
   margin-left: -15px;
   margin-right: -15px;
-  margin-bottom: 30px;
   /*Need to absorb .block bottom margin*/ }
 
 .block {
@@ -73,6 +72,10 @@ body {
 html body .flex {
   display: flex; }
 
+.hidden-xs,
+.hidden-sm {
+  display: none; }
+
 @media screen and (min-width: 576px) {
   .block__half--xs {
     flex: 0 0 50%;
@@ -82,7 +85,11 @@ html body .flex {
     max-width: 33.3333%; }
   .block__fourth--xs {
     flex: 0 0 25%;
-    max-width: 25%; } }
+    max-width: 25%; }
+  .hidden-xs {
+    display: inline-block; }
+  .visible-xs {
+    display: none; } }
 
 @media screen and (min-width: 768px) {
   .block__half--sm {
@@ -93,7 +100,11 @@ html body .flex {
     max-width: 33.3333%; }
   .block__fourth--sm {
     flex: 0 0 25%;
-    max-width: 25%; } }
+    max-width: 25%; }
+  .hidden-sm {
+    display: inline-block; }
+  .visible-sm {
+    display: none; } }
 
 @media screen and (min-width: 992px) {
   .block__half--md {
@@ -267,13 +278,12 @@ ol {
 .h1__title {
   position: relative;
   font-family: 'Bungee Shade', cursive;
-  margin-top: 0.25em;
-  line-height: 150px; }
+  margin-top: 2.7em; }
   .h1__title:before {
     content: '';
     position: absolute;
-    top: 0;
-    left: 275px;
+    top: -160px;
+    left: calc(50% - 75px);
     height: 150px;
     width: 150px;
     border: 2px solid #ffffff;
@@ -285,13 +295,8 @@ ol {
   .h1__title:hover:before {
     animation: emoji-madness 0.5s forwards; }
 
-#skills-expertise h2 {
-  animation: swell 5s infinite; }
-
-.mustache {
-  transform: rotate(83deg); }
-
 .header {
+  flex-direction: column;
   justify-content: center;
   align-items: center; }
   .header a {
@@ -326,11 +331,35 @@ ol {
 .mleft {
   display: inline-block; }
 
-.mright {
-  margin-right: 90px; }
+@media screen and (min-width: 768px) {
+  .h1__title {
+    margin-top: 0.25em;
+    line-height: 1em;
+    width: 280px; }
+    .h1__title:before {
+      display: none; }
+  .header {
+    flex-direction: row; } }
 
-.mleft {
-  margin-left: 90px; }
+@media screen and (min-width: 992px) {
+  .h1__title {
+    margin-top: 0.25em;
+    line-height: 150px;
+    font-size: 3.3em;
+    width: auto; }
+    .h1__title:before {
+      display: block;
+      top: 0; }
+  .header {
+    flex-direction: row; }
+  .mright {
+    margin-right: 90px; }
+  .mleft {
+    margin-left: 90px; } }
+
+@media screen and (min-width: 1088px) {
+  .h1__title {
+    font-size: 4em; } }
 
 body {
   color: #ffffff;
@@ -358,5 +387,11 @@ a {
   animation: none;
   background-color: transparent;
   color: #ffffff; }
+
+#skills-expertise h2 {
+  animation: swell 5s infinite; }
+
+.mustache {
+  transform: rotate(83deg); }
 
 /*# sourceMappingURL=main.css.map */
