--- a/eks/sass/main.scss
+++ b/eks/sass/main.scss
@@ -1,14 +1,17 @@
 $white: #ffffff;
 $blue: #1c72b8;
 $block_bottom_padding: 30px;
+$button_green: #6bd06b;
 
 @import 'resets';
 @import 'animations';
 @import 'grid';
+@import 'font-face';
 @import 'typography';
 @import 'emoticons';
 @import 'components/components';
 @import 'header';
+@import 'forms';
 
 
 body {
