--- a/eks/sass/_forms.scss
+++ b/eks/sass/_forms.scss
@@ -16,7 +16,8 @@ input[type="password"] {
     padding-left: 0.5em;
 }
 
-input[type="submit"] {
+input[type="submit"],
+.admin-btn {
     background: $button_green;
     font-size: 1em;
     padding: 1em;
