Build out new/edit document views

--- a/eks/sass/_forms.scss
+++ b/eks/sass/_forms.scss
@@ -17,7 +17,7 @@ input[type="password"] {
 }
 
 input[type="submit"],
-.admin-btn {
+.btn-admin {
     background: $button_green;
     font-size: 1em;
     padding: 1em;
