--- a/public/css/main.css
+++ b/public/css/main.css
@@ -393,7 +393,7 @@ input[type="password"] {
   padding-left: 0.5em; }
 
 input[type="submit"],
-.admin-btn {
+.btn-admin {
   background: #6bd06b;
   font-size: 1em;
   padding: 1em;
