Initial revision diffing and more CRUD operation support. Initial CRU done.

--- a/eks/sass/admin.scss
+++ b/eks/sass/admin.scss
@@ -19,6 +19,7 @@ $heavy_gray: #cccccc;
 @import 'admin/menus';
 @import 'admin/forms';
 @import 'admin/editor';
+@import 'admin/diff';
 
 .admin-table {
     width: 100%;
